--- a/configs/conda/short-read-taxonomy.yaml
+++ b/configs/conda/short-read-taxonomy.yaml
@@ -1,214 +1,247 @@
-name: camptax
+name: short-read-taxonomy
 channels:
   - agbiome
-  - biobakery
   - conda-forge
   - bioconda
   - defaults
-  - r
   - ursky
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
+  - _r-mutex=1.0.1=anacondar_1
+  - abseil-cpp=20211102.0=h27087fc_1
+  - aioeasywebdav=2.4.0=pyha770c72_0
+  - aiohttp=3.8.1=py310h5764c6d_1
+  - aiosignal=1.2.0=pyhd8ed1ab_0
+  - amply=0.1.5=pyhd8ed1ab_0
+  - appdirs=1.4.4=pyh9f0ad1d_0
+  - arrow=1.2.2=pyhd8ed1ab_0
+  - async-timeout=4.0.2=pyhd8ed1ab_0
+  - attmap=0.13.2=pyhd8ed1ab_0
+  - attrs=21.4.0=pyhd8ed1ab_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
   - bbtools=37.62=0
-  - bcbio-gff=0.6.9=pyh5e36f6f_0
-  - biom-format=2.1.12=py37hda87dfa_1
-  - biopython=1.79=py37h540881e_2
-  - blast=2.9.0=h20b68b9_1
-  - boost=1.68.0=py37h8619c78_1001
-  - boost-cpp=1.68.0=h11c811c_1000
-  - bowtie2=2.4.5=py37h1840d8f_2
-  - bracken=2.7=py37h96cfd12_0
-  - brotli=1.0.9=h166bdaf_7
-  - brotli-bin=1.0.9=h166bdaf_7
-  - brotlipy=0.7.0=py37h540881e_1004
-  - bx-python=0.8.13=py37hfa8f21c_1
+  - bcrypt=3.2.2=py310h5764c6d_0
+  - binaryornot=0.4.4=py_1
+  - binutils_impl_linux-64=2.36.1=h193b22a_2
+  - boto3=1.24.23=pyhd8ed1ab_0
+  - botocore=1.27.23=pyhd8ed1ab_0
+  - brotlipy=0.7.0=py310h5764c6d_1004
+  - bump2version=1.0.1=pyh9f0ad1d_0
+  - bwidget=1.9.14=ha770c72_1
   - bzip2=1.0.8=h7f98852_4
   - c-ares=1.18.1=h7f98852_0
-  - ca-certificates=2022.6.15=ha878542_0
-  - cached-property=1.5.2=hd8ed1ab_1
-  - cached_property=1.5.2=pyha770c72_1
-  - capnproto=0.9.1=h780b84a_5
-  - cffi=1.15.1=py37h43b0acd_0
+  - ca-certificates=2022.12.7=ha878542_0
+  - cachetools=5.0.0=pyhd8ed1ab_0
+  - cairo=1.16.0=ha61ee94_1014
+  - certifi=2022.12.7=pyhd8ed1ab_0
+  - cffi=1.15.1=py310h255011f_0
+  - chardet=5.0.0=py310hff52083_0
   - charset-normalizer=2.1.0=pyhd8ed1ab_0
-  - click=8.1.3=py37h89c1867_0
-  - cmseq=1.0.4=pyhb7b1952_0
-  - cryptography=37.0.4=py37h38fbfac_0
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - dendropy=4.5.2=pyh3252c3a_0
-  - diamond=0.9.24=ha888412_1
-  - fasttree=2.1.11=hec16e2b_1
-  - fonttools=4.34.4=py37h540881e_0
-  - freetype=2.10.4=h0708190_1
-  - future=0.18.2=py37h89c1867_5
-  - gettext=0.19.8.1=h73d1719_1008
-  - giflib=5.2.1=h36c2ea0_2
-  - glpk=5.0=h445213a_0
-  - gmp=6.2.1=h58526e2_0
-  - gnutls=3.6.13=h79a8f9a_0
+  - click=8.1.3=py310hff52083_0
+  - click-default-group=1.2.2=pyhd8ed1ab_1
+  - coincbc=2.10.5=hcee13e7_1
+  - configargparse=1.5.3=pyhd8ed1ab_0
+  - connection_pool=0.0.3=pyhd3deb0d_0
+  - cookiecutter=2.1.1=pyh6c4a22f_0
+  - cryptography=37.0.2=py310h597c629_0
+  - curl=7.83.1=h7bff187_0
+  - datrie=0.8.2=py310h6acc77f_3
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - docutils=0.19=py310hff52083_0
+  - dpath=2.0.6=py310hff52083_1
+  - dropbox=11.32.0=pyhd8ed1ab_0
+  - expat=2.4.9=h27087fc_0
+  - filechunkio=1.8=py_2
+  - filelock=3.7.1=pyhd8ed1ab_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=hab24e00_0
+  - fontconfig=2.14.0=hc2a2eb6_1
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - freetype=2.12.1=hca18f0e_0
+  - fribidi=1.0.10=h36c2ea0_0
+  - frozenlist=1.3.0=py310h5764c6d_1
+  - ftputil=5.0.4=pyhd8ed1ab_0
+  - gcc_impl_linux-64=12.1.0=hea43390_16
+  - gettext=0.19.8.1=h27087fc_1009
+  - gfortran_impl_linux-64=12.1.0=h1db8e46_16
+  - gitdb=4.0.9=pyhd8ed1ab_0
+  - gitpython=3.1.27=pyhd8ed1ab_0
+  - google-api-core=2.8.2=pyhd8ed1ab_0
+  - google-api-python-client=2.52.0=pyhd8ed1ab_0
+  - google-auth=2.9.0=pyh6c4a22f_0
+  - google-auth-httplib2=0.1.0=pyhd8ed1ab_1
+  - google-cloud-core=2.3.1=pyhd8ed1ab_0
+  - google-cloud-storage=2.4.0=pyh6c4a22f_0
+  - google-crc32c=1.1.2=py310he8fe98e_3
+  - google-resumable-media=2.3.3=pyhd8ed1ab_0
+  - googleapis-common-protos=1.56.3=py310hff52083_0
+  - graphite2=1.3.13=h58526e2_1001
+  - grpc-cpp=1.47.0=hbd84cd8_1
+  - grpcio=1.47.0=py310ha0b7d45_1
   - gsl=2.7=he838d99_0
-  - h5py=3.7.0=nompi_py37hc97082c_100
-  - hdf5=1.12.1=nompi_h2386368_104
+  - gxx_impl_linux-64=12.1.0=hea43390_16
+  - harfbuzz=5.2.0=hf9f4e7c_0
   - htslib=1.15.1=h9753748_0
-  - humann=3.0.1=py_0
-  - icu=58.2=hf484d3e_1000
+  - httplib2=0.20.4=pyhd8ed1ab_0
+  - icu=70.1=h27087fc_0
   - idna=3.3=pyhd8ed1ab_0
-  - iqtree=2.2.0.3=hb97b32f_0
-  - java-jdk=8.0.112=1
+  - importlib-metadata=4.11.4=py310hff52083_0
+  - importlib_resources=5.8.0=pyhd8ed1ab_0
+  - iniconfig=1.1.1=pyh9f0ad1d_0
+  - java-jdk=7.0.91=1
+  - jinja2=3.1.2=pyhd8ed1ab_1
+  - jinja2-time=0.2.0=pyhd8ed1ab_3
+  - jmespath=1.0.1=pyhd8ed1ab_0
   - jpeg=9e=h166bdaf_2
+  - jsonschema=4.6.1=pyhd8ed1ab_0
+  - jupyter_core=4.10.0=py310hff52083_0
+  - kernel-headers_linux-64=2.6.32=he073ed8_15
   - keyutils=1.6.1=h166bdaf_0
-  - kiwisolver=1.4.3=py37h7cecad7_0
-  - kraken2=2.1.2=pl5321h9f5acd7_2
   - krb5=1.19.3=h3790be6_0
-  - lcms2=2.12=hddcbb42_0
   - ld_impl_linux-64=2.36.1=hea4e1c9_2
   - lerc=3.0=h9c3ff4c_0
   - libblas=3.9.0=15_linux64_openblas
-  - libbrotlicommon=1.0.9=h166bdaf_7
-  - libbrotlidec=1.0.9=h166bdaf_7
-  - libbrotlienc=1.0.9=h166bdaf_7
   - libcblas=3.9.0=15_linux64_openblas
+  - libcrc32c=1.1.2=h9c3ff4c_0
   - libcurl=7.83.1=h7bff187_0
   - libdeflate=1.10=h7f98852_0
   - libedit=3.1.20191231=he28a2e2_2
   - libev=4.33=h516909a_1
   - libffi=3.4.2=h7f98852_5
+  - libgcc-devel_linux-64=12.1.0=h1ec3361_16
   - libgcc-ng=12.1.0=h8d9b700_16
   - libgfortran-ng=12.1.0=h69a702a_16
   - libgfortran5=12.1.0=hdcd56e2_16
+  - libglib=2.74.0=h7a41b64_0
   - libgomp=12.1.0=h8d9b700_16
-  - libiconv=1.16=h516909a_0
-  - libidn2=2.3.3=h166bdaf_0
+  - libiconv=1.17=h166bdaf_0
   - liblapack=3.9.0=15_linux64_openblas
   - libnghttp2=1.47.0=h727a467_0
   - libnsl=2.0.0=h7f98852_0
   - libopenblas=0.3.20=pthreads_h78a6416_0
-  - libpng=1.6.37=h753d276_3
+  - libpng=1.6.38=h753d276_0
+  - libprotobuf=3.20.1=h6239696_0
+  - libsanitizer=12.1.0=ha89aaad_16
+  - libsodium=1.0.18=h36c2ea0_1
   - libssh2=1.10.0=ha56f1ee_2
+  - libstdcxx-devel_linux-64=12.1.0=h1ec3361_16
   - libstdcxx-ng=12.1.0=ha89aaad_16
   - libtiff=4.4.0=h0fcbabc_0
-  - libunistring=0.9.10=h7f98852_0
-  - libwebp=1.2.2=h3452ae3_0
-  - libwebp-base=1.2.2=h7f98852_1
+  - libuuid=2.32.1=h7f98852_1000
+  - libwebp-base=1.2.4=h166bdaf_0
   - libxcb=1.13=h7f98852_1004
-  - libzlib=1.2.12=h166bdaf_2
-  - lz4-c=1.9.3=h9c3ff4c_1
-  - lzo=2.10=h516909a_1000
-  - mafft=7.505=hec16e2b_0
-  - mash=2.3=ha9a2dd8_3
-  - matplotlib-base=3.5.2=py37hc347a89_0
-  - metaphlan=3.0.14=pyhb7b1952_0
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - muscle=5.1=h9f5acd7_1
+  - libxml2=2.9.14=h22db469_4
+  - libzlib=1.2.12=h166bdaf_1
+  - logmuse=0.2.6=pyh8c360ce_0
+  - make=4.3=hd18ef5c_1
+  - markupsafe=2.1.1=py310h5764c6d_1
+  - multidict=6.0.2=py310h5764c6d_1
+  - nbformat=5.4.0=pyhd8ed1ab_0
   - ncurses=6.3=h27087fc_1
-  - nettle=3.4.1=h1bed415_1002
-  - numpy=1.21.6=py37h976b520_0
-  - openjdk=8.0.112=zulu8.19.0.1_3
-  - openjpeg=2.4.0=hb52868f_1
-  - openssl=1.1.1q=h166bdaf_0
+  - numpy=1.23.0=py310h53a5b5f_0
+  - oauth2client=4.1.3=py_0
+  - openssl=1.1.1s=h0b41bf4_1
   - packaging=21.3=pyhd8ed1ab_0
-  - patsy=0.5.2=pyhd8ed1ab_0
-  - pcre=8.45=h9c3ff4c_0
-  - perl=5.32.1=2_h7f98852_perl5
-  - perl-archive-tar=2.40=pl5321hdfd78af_0
-  - perl-carp=1.38=pl5321hdfd78af_4
-  - perl-common-sense=3.75=pl5321hdfd78af_0
-  - perl-compress-raw-bzip2=2.201=pl5321h87f3376_0
-  - perl-compress-raw-zlib=2.105=pl5321h87f3376_0
-  - perl-encode=3.18=pl5321hec16e2b_0
-  - perl-exporter=5.72=pl5321hdfd78af_2
-  - perl-exporter-tiny=1.002002=pl5321hdfd78af_0
-  - perl-extutils-makemaker=6.66=0
-  - perl-io-compress=2.106=pl5321h87f3376_0
-  - perl-io-zlib=1.11=pl5321hdfd78af_0
-  - perl-json=4.07=pl5321hdfd78af_0
-  - perl-json-xs=2.34=pl5321h9f5acd7_5
-  - perl-list-moreutils=0.430=pl5321hdfd78af_0
-  - perl-list-moreutils-xs=0.430=pl5321hec16e2b_1
-  - perl-parent=0.236=pl5321hdfd78af_2
-  - perl-pathtools=3.75=pl5321hec16e2b_3
-  - perl-scalar-list-utils=1.62=pl5321hec16e2b_0
-  - perl-threaded=5.32.1=hdfd78af_1
-  - perl-types-serialiser=1.01=pl5321hdfd78af_0
-  - phylophlan=3.0.2=py_0
-  - pillow=9.2.0=py37h44f0d7a_0
+  - pandas=1.4.3=py310h769672d_0
+  - pango=1.50.10=hc4f8a73_0
+  - paramiko=2.11.0=pyhd8ed1ab_0
+  - pcre2=10.37=hc3806b6_1
+  - peppy=0.31.2=pyhd8ed1ab_2
   - pip=22.1.2=pyhd8ed1ab_0
-  - popt=1.16=1
+  - pixman=0.40.0=h36c2ea0_0
+  - plac=1.3.5=pyhd8ed1ab_0
+  - pluggy=1.0.0=py310hff52083_3
+  - ply=3.11=py_1
+  - prettytable=3.3.0=pyhd8ed1ab_0
+  - protobuf=3.20.1=py310hd8f1fbe_0
+  - psutil=5.9.1=py310h5764c6d_0
   - pthread-stubs=0.4=h36c2ea0_1001
+  - pulp=2.6.0=py310hff52083_1
+  - py=1.11.0=pyh6c4a22f_0
+  - pyasn1=0.4.8=py_0
+  - pyasn1-modules=0.2.7=py_0
   - pycparser=2.21=pyhd8ed1ab_0
+  - pygments=2.12.0=pyhd8ed1ab_0
+  - pynacl=1.5.0=py310h5764c6d_1
   - pyopenssl=22.0.0=pyhd8ed1ab_0
   - pyparsing=3.0.9=pyhd8ed1ab_0
-  - pysam=0.19.1=py37h8fe4cdf_0
-  - pysocks=1.7.1=py37h89c1867_5
-  - python=3.7.12=hb7a2778_100_cpython
+  - pyrsistent=0.18.1=py310h5764c6d_1
+  - pysftp=0.2.9=py_1
+  - pysocks=1.7.1=py310hff52083_5
+  - pytest=7.1.2=py310hff52083_0
+  - python=3.10.5=h582c2e5_0_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-lzo=1.14=py37hd06c622_1
-  - python_abi=3.7=2_cp37m
+  - python-fastjsonschema=2.15.3=pyhd8ed1ab_0
+  - python-irodsclient=1.1.4=pyhd8ed1ab_0
+  - python-slugify=6.1.2=pyhd8ed1ab_0
+  - python_abi=3.10=2_cp310
   - pytz=2022.1=pyhd8ed1ab_0
-  - raxml=8.2.12=hec16e2b_4
+  - pyu2f=0.1.5=pyhd8ed1ab_0
+  - pyyaml=6.0=py310h5764c6d_4
+  - r-base=4.2.1=ha8c3e7c_1
+  - ratelimiter=1.2.0=py_1002
+  - re2=2022.06.01=h27087fc_0
   - readline=8.1.2=h0f457ee_0
   - requests=2.28.1=pyhd8ed1ab_0
-  - rsync=3.1.3=h1245774_1003
+  - retry=0.9.2=py_0
+  - rsa=4.8=pyhd8ed1ab_0
+  - s3transfer=0.6.0=pyhd8ed1ab_0
   - samtools=1.15.1=h1170115_0
-  - scipy=1.7.3=py37hf2a6cf1_0
-  - seaborn=0.11.2=hd8ed1ab_0
-  - seaborn-base=0.11.2=pyhd8ed1ab_0
-  - setuptools=59.8.0=py37h89c1867_1
+  - sed=4.8=he412f7d_0
+  - seqtk=1.3=h7132678_4
+  - setuptools=63.1.0=py310hff52083_0
+  - setuptools-scm=7.0.4=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
+  - slacker=0.14.0=py_0
+  - smart_open=6.0.0=pyhd8ed1ab_0
+  - smmap=3.0.5=pyh44b312d_0
+  - snakemake=7.8.5=hdfd78af_0
+  - snakemake-minimal=7.8.5=pyhdfd78af_0
   - sqlite=3.39.0=h4ff8645_0
-  - statsmodels=0.13.2=py37hda87dfa_0
-  - tar=1.34=ha1f6473_0
-  - tbb=2020.2=h4bd325d_4
+  - stone=3.3.1=pyhd8ed1ab_0
+  - stopit=1.1.2=py_0
+  - sysroot_linux-64=2.12=he073ed8_15
+  - tabulate=0.8.10=pyhd8ed1ab_0
+  - text-unidecode=1.3=py_0
   - tk=8.6.12=h27826a3_0
-  - trimal=1.4.1=h9f5acd7_6
+  - tktable=2.10=hb7b940f_3
+  - tomli=2.0.1=pyhd8ed1ab_0
+  - toposort=1.7=pyhd8ed1ab_0
+  - traitlets=5.3.0=pyhd8ed1ab_0
   - typing-extensions=4.3.0=hd8ed1ab_0
   - typing_extensions=4.3.0=pyha770c72_0
-  - unicodedata2=14.0.0=py37h540881e_1
-  - urllib3=1.26.10=pyhd8ed1ab_0
-  - wget=1.20.3=ha56f1ee_1
+  - tzdata=2022a=h191b570_0
+  - ubiquerg=0.6.1=pyh9f0ad1d_0
+  - unidecode=1.3.4=pyhd8ed1ab_0
+  - uritemplate=4.1.1=pyhd8ed1ab_0
+  - urllib3=1.26.9=pyhd8ed1ab_0
+  - veracitools=0.1.3=py_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
   - wheel=0.37.1=pyhd8ed1ab_0
+  - wrapt=1.14.1=py310h5764c6d_0
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libice=1.0.10=h7f98852_0
+  - xorg-libsm=1.2.3=hd9c2040_1000
+  - xorg-libx11=1.7.2=h7f98852_0
   - xorg-libxau=1.0.9=h7f98852_0
   - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxext=1.3.4=h7f98852_1
+  - xorg-libxrender=0.9.10=h7f98852_1003
+  - xorg-libxt=1.2.1=h7f98852_2
+  - xorg-renderproto=0.11.1=h7f98852_1002
+  - xorg-xextproto=7.3.0=h7f98852_1002
+  - xorg-xproto=7.0.31=h7f98852_1007
   - xz=5.2.5=h516909a_1
-  - zlib=1.2.12=h166bdaf_2
-  - zstd=1.5.2=h8a70e8d_2
-  - pip:
-    - appdirs==1.4.4
-    - attrs==21.4.0
-    - certifi==2022.6.15
-    - configargparse==1.5.3
-    - connection-pool==0.0.3
-    - datrie==0.8.2
-    - decorator==5.1.1
-    - docutils==0.19
-    - dpath==2.0.6
-    - fastjsonschema==2.15.3
-    - gitdb==4.0.9
-    - gitpython==3.1.27
-    - importlib-metadata==4.12.0
-    - importlib-resources==5.8.0
-    - jinja2==3.1.2
-    - jsonschema==4.7.2
-    - jupyter-core==4.11.1
-    - markupsafe==2.1.1
-    - nbformat==5.4.0
-    - pandas==1.3.5
-    - plac==1.3.5
-    - psutil==5.9.1
-    - pulp==2.6.0
-    - py==1.11.0
-    - pyrsistent==0.18.1
-    - pyyaml==6.0
-    - ratelimiter==1.2.0.post0
-    - retry==0.9.2
-    - smart-open==6.0.0
-    - smmap==5.0.0
-    - snakemake==7.8.5
-    - stopit==1.1.2
-    - tabulate==0.8.10
-    - toposort==1.7
-    - traitlets==5.3.0
-    - wrapt==1.14.1
-    - yte==1.5.1
-    - zipp==3.8.1
-prefix: /home/btt4001/miniconda3/envs/camptax
+  - yaml=0.2.5=h7f98852_2
+  - yarl=1.7.2=py310h5764c6d_2
+  - yte=1.5.1=py310hff52083_0
+  - zipp=3.8.0=pyhd8ed1ab_0
+  - zlib=1.2.12=h166bdaf_1
+  - zstd=1.5.2=h6239696_4
+prefix: /home/lam4003/bin/anaconda3/envs/short-read-taxonomy
